--- a/run.ipynb
+++ b/run.ipynb
@@ -154,6 +154,63 @@
     "                            load_if_exists=True)\n",
     "study.optimize(objective, n_trials=100)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of classes:  15\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Class 15'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m class_dict:\n\u001b[1;32m     26\u001b[0m         labels[labels \u001b[38;5;241m==\u001b[39m i] \u001b[38;5;241m=\u001b[39m class_dict[i]\n\u001b[0;32m---> 28\u001b[0m \u001b[43mplot_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/hyper-param-optim-4-vector-field-clustering/plot/plotting.py:268\u001b[0m, in \u001b[0;36mplot_class\u001b[0;34m(labels, parameters_dict)\u001b[0m\n\u001b[1;32m    256\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\" Configuration for the class plot\u001b[39;00m\n\u001b[1;32m    257\u001b[0m \n\u001b[1;32m    258\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    263\u001b[0m \u001b[38;5;124;03m    None\u001b[39;00m\n\u001b[1;32m    264\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    265\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of classes: \u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    266\u001b[0m       \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(labels)) \u001b[38;5;241m-\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01min\u001b[39;00m labels \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m--> 268\u001b[0m class_dict \u001b[38;5;241m=\u001b[39m \u001b[43mc_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    270\u001b[0m traces \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n\u001b[1;32m    271\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m class_id, colour \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(class_dict, ptx\u001b[38;5;241m.\u001b[39mcolors\u001b[38;5;241m.\u001b[39mqualitative\u001b[38;5;241m.\u001b[39mDark24):\n",
+      "File \u001b[0;32m~/hyper-param-optim-4-vector-field-clustering/plot/plotting.py:250\u001b[0m, in \u001b[0;36mc_dict\u001b[0;34m(labels, simulation_file_paths)\u001b[0m\n\u001b[1;32m    248\u001b[0m         class_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOutliers\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mstr\u001b[39m(path))\n\u001b[1;32m    249\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 250\u001b[0m         \u001b[43mclass_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mClass \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mclass_\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mstr\u001b[39m(path))\n\u001b[1;32m    252\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m class_dict\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Class 15'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from plot import plot_class\n",
+    "\n",
+    "labels = np.load(\"data/labels.npy\")\n",
+    "\n",
+    "class_dict = {\"1_skyrmion\": 0,\n",
+    "                \"2_skyrmions\": 1,\n",
+    "                \"4_skyrmions\": 2,\n",
+    "                \"5_skyrmions\": 3,\n",
+    "                \"quasi_sat\": 4,\n",
+    "                \"target_skyrmion_1\": 5,\n",
+    "                \"target_skyrmion_2\": 6,\n",
+    "                \"helical_1\": 7,\n",
+    "                \"helical_2\": 8,\n",
+    "                \"cross_1\": 9,\n",
+    "                \"cross_2\": 10,\n",
+    "                \"horseshoe_1\": 11,\n",
+    "                \"horseshoe_2\": 12,\n",
+    "                \"cross_1\": 13,\n",
+    "                \"cross_2\": 14,\n",
+    "                \"cross_3\": 15\n",
+    "                }\n",
+    "\n",
+    "for i in labels:\n",
+    "    if i in class_dict:\n",
+    "        labels[labels == i] = class_dict[i]\n",
+    "\n",
+    "plot_class(labels)\n"
+   ]
   }
  ],
  "metadata": {
